Add EXAONE4 module mocking and update dependencies
Introduced EXAONE4 module mocking in both exaone_loader.py and handler.py to enable loading of fine-tuned models without the actual EXAONE4 implementation. Updated transformers to 4.46.0 and added safetensors and einops to requirements.txt for improved compatibility and functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 runpod==1.6.2
 torch==2.1.2
-transformers==4.37.2
+transformers==4.46.0
 bitsandbytes==0.42.0
 accelerate==0.25.0
 peft==0.7.1
@@ -8,3 +8,5 @@ huggingface-hub==0.20.2
 sentencepiece==0.1.99
 protobuf==3.20.3
 scipy==1.11.4
+safetensors==0.4.1
+einops==0.7.0
